adding working fetch request

--- a/index.html
+++ b/index.html
@@ -9,6 +9,28 @@
     <link rel="stylesheet" href="./assets/style.css" />
 </head>
 <body>
+    <header>
+        <h1><em> Max's Weather Forecast</em></h1>
+    </header>
+    <main>
+        <div id="searchArea">
+            <p id="test2">test2</p>
+            <input id ="search" type="text">
+            <p id="searchBtn">search</p>
+            <ul id="savedCities">
+            </ul>
+        </div>
+        <div id="weatherDisplay">
+            <div id="currentDay">
+                <h2 id=currentCity></h2>
+                <p>Today's Forecast</p>
+                <p id="currentWeather"></p>
+                <ul id="forecast">
+                    <li></li>
+                </ul>
+            </div>
+        </div>
+    </main>
     <script src="./assets/script.js"></script>
 </body>
 </html>
