saving searches to an area thye can be clicked and recalled

--- a/index.html
+++ b/index.html
@@ -14,21 +14,21 @@
     </header>
     <main>
         <div id="searchArea">
-            <p id="test2">test2</p>
+            <p><u>Search Your City Here:</u></p>
             <input id ="search" type="text">
-            <p id="searchBtn">search</p>
+            <p id="searchBtn">Search</p>
+            <div><u>Previous Searches: Click to Revisit</u></div>
             <ul id="savedCities">
             </ul>
         </div>
         <div id="weatherDisplay">
             <div id="currentDay">
                 <h2 id=currentCity></h2>
-                <p>Today's Forecast</p>
-                <p id="currentWeather"></p>
+            </div>
                 <ul id="forecast">
                     <li></li>
                 </ul>
-            </div>
+            
         </div>
     </main>
     <script src="./assets/script.js"></script>
